fixes overlap of open access icon

--- a/web/themes/custom/asulib_barrio/scss/components/field.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/field.scss
@@ -154,6 +154,7 @@ img.copyright-logo {
     margin-top: -15px;
     margin-left: -5px;
     fill: #F68207;
+    padding-top: 10px;
 }
 .field--name-field-open-access a.icon-link:hover svg {
     fill: #F68207;
